// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarEntity /> should render a basic avatar entity 1`] = `
<styled.div
  data-component-type="avatar_entity"
  isHoverable={false}
>
  <styled.div
    size="normal"
  >
    <styled.span
      size="normal"
    >
      <Avatar
        initials="JW"
        size="medium"
      />
    </styled.span>
    <styled.div
      size="normal"
    >
      <Text
        color="#262D33"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="body"
      >
        John Wick
      </Text>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a normal compact avatar entity 1`] = `
<styled.div
  data-component-type="avatar_entity"
  isHoverable={false}
>
  <styled.div
    size="normalCompact"
  >
    <styled.span
      size="normalCompact"
    >
      <Avatar
        initials="JW"
        size="medium"
      />
    </styled.span>
    <styled.div
      size="normalCompact"
    >
      <Text
        color="#262D33"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="small"
      >
        John Wick
      </Text>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a small avatar entity 1`] = `
<styled.div
  data-component-type="avatar_entity"
  isHoverable={false}
>
  <styled.div
    size="small"
  >
    <styled.span
      size="small"
    >
      <Avatar
        imageUrl="www.example.com"
        initials="JW"
        size="small"
        statusDot="indigo"
      />
    </styled.span>
    <styled.div
      size="small"
    >
      <Text
        color="#262D33"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="small"
      >
        John Wick
      </Text>
      <Text
        color="#424F5C"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="xsmall"
      >
        Guy Killer
      </Text>
    </styled.div>
  </styled.div>
  <styled.div
    size="small"
  >
    <Text
      color="#424F5C"
      isInline={false}
      isTruncated={true}
      tag="span"
      type="xsmall"
    >
      In Cinemas 2019
    </Text>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a small compact avatar entity 1`] = `
<styled.div
  data-component-type="avatar_entity"
  isHoverable={false}
>
  <styled.div
    size="smallCompact"
  >
    <styled.span
      size="smallCompact"
    >
      <Avatar
        imageUrl="www.example.com"
        initials="JW"
        size="small"
        statusDot="indigo"
      />
    </styled.span>
    <styled.div
      size="smallCompact"
    >
      <Text
        color="#262D33"
        isInline={true}
        isTruncated={true}
        tag="span"
        type="small"
      >
        John Wick
      </Text>
      <Text
        color="#424F5C"
        isInline={true}
        isTruncated={true}
        margins={
          Object {
            "left": 8,
          }
        }
        tag="span"
        type="xsmall"
      >
        (Guy Killer)
      </Text>
    </styled.div>
  </styled.div>
</styled.div>
`;
